<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_wallet_provider"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.ebabu.tooreest.customview.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/your_balance"
                android:textAllCaps="true"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                app:edittextfont="ROBOTO-REGULAR.TTF"
                app:edittextfontHint="ROBOTO-REGULAR.TTF" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/black_circle"
                android:padding="20dp"
                android:scaleType="center"
                android:src="@mipmap/c_wallet" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="35dp"
                android:background="@color/category_divider_gray" />

            <com.ebabu.tooreest.customview.CustomTextView
                android:id="@+id/tv_wallet_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="-"
                android:textColor="@color/primaryColor"
                android:textSize="30sp"
                app:edittextfont="ROBOTO-BOLD.TTF"
                app:edittextfontHint="ROBOTO-BOLD.TTF" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/category_divider_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <com.ebabu.tooreest.customview.CustomTextView
                    android:id="@+id/btn_transaction"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_rounded_solid_bg"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/transactions"
                    android:textColor="@color/white"
                    app:edittextfont="ROBOTO-REGULAR.TTF"
                    app:edittextfontHint="ROBOTO-REGULAR.TTF" />

                <com.ebabu.tooreest.customview.CustomTextView
                    android:id="@+id/btn_add_money"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_rounded_solid_bg"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/add_money"
                    android:textColor="@color/white"
                    app:edittextfont="ROBOTO-REGULAR.TTF"
                    app:edittextfontHint="ROBOTO-REGULAR.TTF" />

                <com.ebabu.tooreest.customview.CustomTextView
                    android:id="@+id/btn_withdraw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_rounded_solid_bg"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/withdraw"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    app:edittextfont="ROBOTO-REGULAR.TTF"
                    app:edittextfontHint="ROBOTO-REGULAR.TTF" />


            </LinearLayout>


            <com.ebabu.tooreest.customview.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/withdraw_condition"
                android:textSize="14sp"
                app:edittextfont="ROBOTO-LIGHT.TTF"
                app:edittextfontHint="ROBOTO-LIGHT.TTF" />


        </LinearLayout>
    </ScrollView>

    <com.ebabu.tooreest.customview.CustomTextView
        android:id="@+id/btn_pay_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/yellow_rounded_solid_bg"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/pay_now"
        android:textColor="@color/white"
        android:visibility="gone"
        app:edittextfont="ROBOTO-REGULAR.TTF"
        app:edittextfontHint="ROBOTO-REGULAR.TTF" />
</LinearLayout>
