<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.ebabu.tooreest.customview.CustomEditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/white_rounded_solid_bg"
            android:hint="@string/enter_title"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textSize="16sp"
            app:edittextfont="ROBOTO-REGULAR.TTF" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/dashed_gray_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:src="@drawable/white_rounded_solid_bg" />

            <com.ebabu.tooreest.customview.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="1dp"
                android:drawablePadding="10dp"
                android:drawableTop="@mipmap/plus"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/upload_doc"
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"
                app:edittextfont="ROBOTO-BOLD.TTF"
                app:edittextfontHint="ROBOTO-REGULAR.TTF" />

            <com.ebabu.tooreest.customview.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/upload_file_message"
                android:textColor="@color/primary_text_color"
                android:textSize="12sp"
                app:edittextfont="ROBOTO-REGULAR.TTF"
                app:edittextfontHint="ROBOTO-REGULAR.TTF" />


            <com.ebabu.tooreest.customview.SquareImageView
                android:id="@+id/iv_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </FrameLayout>
    </LinearLayout>

    <com.ebabu.tooreest.customview.CustomTextView
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/yellow_rounded_solid_bg"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:edittextfont="ROBOTO-REGULAR.TTF" />
</LinearLayout>
